fixed some html display issues; now only the blanks are spaced by wrapping it in a span; proper spacing elsewhere in the html now

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,3 @@
-#current-word{
+#current-word span{
 	letter-spacing: 7px;
 }
